# pyext-sqlite

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/pyext_sqlite/: __init__.py  db.py
tests/: conftest.py  test_db.py
