[project]
name = "pyext-sqlite"
version = "0.1.0"
description = "Python SQLite extension library with CRUD helpers"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyext_sqlite"]
